--- a/estilos/style.css
+++ b/estilos/style.css
@@ -11,8 +11,9 @@
     margin: 0;
     padding: 0;
 }
-
-
+html, body{
+    min-height: 100vh;
+}
 
 header{
     background-color: #000;
@@ -35,7 +36,7 @@ header > p{
 a{
     color: #fff;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: bolder;
 }
 a:hover{
     text-decoration: underline;
@@ -47,12 +48,22 @@ section{
     padding-left: 30px;
     font-size: 3.5vw;
     font-family: var(--font2);
-    line-height: 2;
+    line-height: 2em;
 }
 section.normal{
-    background-color: grey;
+    background-color: #fff;
+    color: #000;
+}
+section.image{
+    background-color: rgb(46, 45, 45);
+    color: #fff;
 }
 
+section.image > p{
+    background-color: rgba(0, 0, 0, 0.247);
+    width: 400px;
+    padding: 10px;
+}
 
 
 
