--- a/estilos/style.css
+++ b/estilos/style.css
@@ -43,6 +43,9 @@ a:hover{
     text-decoration: underline;
 }
 
+
+
+
 section{
     padding-top: 10vh;
     padding-bottom: 10vh;
@@ -64,6 +67,25 @@ section.image > p{
     background-color: rgba(0, 0, 0, 0.247);
     display: inline-block;
     padding: 10px;
+    text-shadow: 1px 1px 1px black;
+}
+section > p{
+    padding-bottom: 50px;
+}
+
+#img01{
+    background-image: url(/imagens/background001.jpg);
+    background-position: right;
+    background-size: cover;
+    background-attachment: fixed;
+    box-shadow: inset 0 0 20px 0px rgba(0, 0, 0, 0.747);
+}
+#img02{
+    background-image: url(/imagens/background002.jpg);
+    background-position: right;
+    background-size: cover;
+    background-attachment: fixed;
+    box-shadow: inset 0 0 20px 0px rgba(0, 0, 0, 0.747);
 }
 
 
