--- a/estilos/style.css
+++ b/estilos/style.css
@@ -61,34 +61,30 @@ section.normal{
 section.image{
     background-color: rgb(46, 45, 45);
     color: #fff;
+    box-shadow: inset 6px 6px 20px 0px rgba(0, 0, 0, 0.747);
+    background-size: cover;
 }
 
 section.image > p{
-    background-color: rgba(0, 0, 0, 0.247);
+    background-color: rgba(0, 0, 0, 0.308);
     display: inline-block;
     padding: 10px;
     text-shadow: 1px 1px 1px black;
 }
 section > p{
-    padding-bottom: 50px;
+    padding-bottom: 2em;
 }
 
 #img01{
-    background-image: url(/imagens/background001.jpg);
-    background-position: right;
-    background-size: cover;
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
     background-attachment: fixed;
-    box-shadow: inset 0 0 20px 0px rgba(0, 0, 0, 0.747);
 }
 #img02{
-    background-image: url(/imagens/background002.jpg);
-    background-position: right;
-    background-size: cover;
-    background-attachment: fixed;
-    box-shadow: inset 0 0 20px 0px rgba(0, 0, 0, 0.747);
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center;
+    background-attachment: fixed;   
 }
-
-
 
 
 
